# shapmat

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb  tutorial_1.ipynb
data/: README.md  curatedCRC.csv  readme  sample.csv  test.csv
local_modif/: tutorial.ipynb
output/: CRC_cluster.csv  shap.csv
shapmat/: PCA.py  clustering.py  clustering_plot.py  explainer.py  shap_plot.py
shapmat copy/: PCA_plot.py  abundance_filter.py  shap_plot.py
