[tool.poetry]
name = "shapmat"
version = "0.1.0"
description = "SHAPMAT leverages SHAP (SHapley Additive exPlanations) for microbiome data analyese that includes local explanation-based feature importance analysis and phenotype subytping/clustering."
authors = ["ryzary <ryzary25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
shap = "^0.42.1"
jupyterlab = "^4.0.5"
notebook = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
